--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <script src="js/qgis2web_expressions.js"></script>
         <script src="js/leaflet.js"></script>
         <script src="js/L.Control.Layers.Tree.min.js"></script>
+        <script src="js/multi-style-layer.js"></script>
         <script src="js/leaflet-svg-shape-markers.min.js"></script>
         <script src="js/leaflet.rotatedMarker.js"></script>
         <script src="js/leaflet.pattern.js"></script>
@@ -34,13 +35,14 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
+        <script src="data/META_1.js"></script>
         <script src="data/Terminals_2.js"></script>
         <script src="data/AtoN_3.js"></script>
         <script src="data/Resources_4.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:false, maxZoom:28, minZoom:1
-        }).fitBounds([[51.68318496468141,-5.080483119488076],[51.72542129000198,-4.953823647722259]]);
+        }).fitBounds([[51.67880341999775,-5.111421061071499],[51.72104383369663,-4.971623491748317]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -91,24 +93,69 @@
         });
         layer_OpenStreetMap_0;
         map.addLayer(layer_OpenStreetMap_0);
-        map.createPane('pane_OpenSeaMap_1');
-        map.getPane('pane_OpenSeaMap_1').style.zIndex = 401;
-        var layer_OpenSeaMap_1 = L.tileLayer('https://t1.openseamap.org/seamark/{z}/{x}/{y}.png', {
-            pane: 'pane_OpenSeaMap_1',
-            opacity: 1.0,
-            attribution: '',
-            minZoom: 1,
-            maxZoom: 28,
-            minNativeZoom: 0,
-            maxNativeZoom: 18
-        });
-        layer_OpenSeaMap_1;
-        map.addLayer(layer_OpenSeaMap_1);
-        function pop_Terminals_2(feature, layer) {
+        function pop_META_1(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
-                        <td class="visible-with-data" id="fid" colspan="2"><strong>fid</strong><br />' + (feature.properties['fid'] !== null ? autolinker.link(String(feature.properties['fid']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                        <td colspan="2">' + (feature.properties['fid'] !== null ? autolinker.link(String(feature.properties['fid']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
                     </tr>\
+                    <tr>\
+                        <td class="visible-with-data" id="Area name" colspan="2"><strong>Area name</strong><br />' + (feature.properties['Area name'] !== null ? autolinker.link(String(feature.properties['Area name']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
+			layer.on('popupopen', function(e) {
+				addClassToPopupIfMedia(content, e.popup);
+			});
+			layer.bindPopup(content, { maxHeight: 400 });
+        }
+
+        var pattern_META_1_0 = new L.StripePattern({
+            weight: 0.3,
+            spaceWeight: 2.0,
+            color: '#b87537',
+            opacity: 0.7,
+            spaceOpacity: 0,
+            angle: 315
+        });
+        pattern_META_1_0.addTo(map);
+        function style_META_1_0() {
+            return {
+                pane: 'pane_META_1',
+                stroke: false,
+                fillOpacity: 1,
+                fillPattern: pattern_META_1_0,
+                interactive: true,
+            }
+        }
+        function style_META_1_1() {
+            return {
+                pane: 'pane_META_1',
+                opacity: 1,
+                color: 'rgba(184,117,55,0.7)',
+                dashArray: '',
+                lineCap: 'square',
+                lineJoin: 'bevel',
+                weight: 2.0,
+                fillOpacity: 0,
+                interactive: true,
+            }
+        }
+        map.createPane('pane_META_1');
+        map.getPane('pane_META_1').style.zIndex = 401;
+        map.getPane('pane_META_1').style['mix-blend-mode'] = 'normal';
+        var layer_META_1 = new L.geoJson.multiStyle(json_META_1, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_META_1',
+            layerName: 'layer_META_1',
+            pane: 'pane_META_1',
+            onEachFeature: pop_META_1,
+            styles: [style_META_1_0,style_META_1_1,]
+        });
+        bounds_group.addLayer(layer_META_1);
+        map.addLayer(layer_META_1);
+        function pop_Terminals_2(feature, layer) {
+            var popupContent = '<table>\
                     <tr>\
                         <td class="visible-with-data" id="Berth name" colspan="2"><strong>Berth name</strong><br />' + (feature.properties['Berth name'] !== null ? autolinker.link(String(feature.properties['Berth name']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
                     </tr>\
@@ -220,9 +267,6 @@
         function pop_AtoN_3(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
-                        <td class="visible-with-data" id="fid" colspan="2"><strong>fid</strong><br />' + (feature.properties['fid'] !== null ? autolinker.link(String(feature.properties['fid']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
                         <td class="visible-with-data" id="AtoN Name" colspan="2"><strong>AtoN Name</strong><br />' + (feature.properties['AtoN Name'] !== null ? autolinker.link(String(feature.properties['AtoN Name']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
@@ -301,9 +345,6 @@
         function pop_Resources_4(feature, layer) {
             var popupContent = '<table>\
                     <tr>\
-                        <td class="visible-with-data" id="fid" colspan="2"><strong>fid</strong><br />' + (feature.properties['fid'] !== null ? autolinker.link(String(feature.properties['fid']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
                         <td class="visible-with-data" id="Pilot boat" colspan="2"><strong>Pilot boat</strong><br />' + (feature.properties['Pilot boat'] !== null ? autolinker.link(String(feature.properties['Pilot boat']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
@@ -364,12 +405,27 @@
         });
         bounds_group.addLayer(layer_Resources_4);
         map.addLayer(layer_Resources_4);
+        map.createPane('pane_OpenSeaMap_5');
+        map.getPane('pane_OpenSeaMap_5').style.zIndex = 405;
+        var layer_OpenSeaMap_5 = L.tileLayer('https://t1.openseamap.org/seamark/{z}/{x}/{y}.png', {
+            pane: 'pane_OpenSeaMap_5',
+            opacity: 1.0,
+            attribution: '',
+            minZoom: 1,
+            maxZoom: 28,
+            minNativeZoom: 0,
+            maxNativeZoom: 18
+        });
+        layer_OpenSeaMap_5;
+        map.addLayer(layer_OpenSeaMap_5);
         var overlaysTree = [
         {label: '<b>Marine</b>',  selectAllCheckbox: true, children: [
+            {label: "OpenSeaMap", layer: layer_OpenSeaMap_5},
             {label: 'Resources<br /><table><tr><td style="text-align: center;"><img src="legend/Resources_4_OOSPlannedmaintenance0.png" /></td><td>OOS - Planned maintenance</td></tr></table>', layer: layer_Resources_4},
             {label: 'AtoN<br /><table><tr><td style="text-align: center;"><img src="legend/AtoN_3_Obscured0.png" /></td><td>Obscured</td></tr><tr><td style="text-align: center;"><img src="legend/AtoN_3_Unlit1.png" /></td><td>Unlit</td></tr></table>', layer: layer_AtoN_3},
             {label: 'Terminals<br /><table><tr><td style="text-align: center;"><img src="legend/Terminals_2_Inservice0.png" /></td><td>In service</td></tr><tr><td style="text-align: center;"><img src="legend/Terminals_2_Ongoingmaintenance1.png" /></td><td>Ongoing maintenance</td></tr><tr><td style="text-align: center;"><img src="legend/Terminals_2_Outofservice2.png" /></td><td>Out of service</td></tr><tr><td style="text-align: center;"><img src="legend/Terminals_2_RestrictedInservice3.png" /></td><td>Restricted - In service</td></tr></table>', layer: layer_Terminals_2},]},
-            {label: "OpenSeaMap", layer: layer_OpenSeaMap_1, radioGroup: 'bm' },
+        {label: '<b>Leisure</b>',  selectAllCheckbox: true, children: [
+            {label: '<img src="legend/META_1.png" /> META', layer: layer_META_1},]},
             {label: "OpenStreetMap", layer: layer_OpenStreetMap_0, radioGroup: 'bm' },]
         var lay = L.control.layers.tree(null, overlaysTree,{
             //namedToggle: true,
@@ -378,59 +434,9 @@
             //openedSymbol: '&#8863; &#x1f5c1;',
             //collapseAll: 'Collapse all',
             //expandAll: 'Expand all',
-            collapsed: false, 
+            collapsed: true,
         });
         lay.addTo(map);
-		document.addEventListener("DOMContentLoaded", function() {
-            // set new Layers List height which considers toggle icon
-            function newLayersListHeight() {
-                var layerScrollbarElement = document.querySelector('.leaflet-control-layers-scrollbar');
-                if (layerScrollbarElement) {
-                    var layersListElement = document.querySelector('.leaflet-control-layers-list');
-                    var originalHeight = layersListElement.style.height 
-                        || window.getComputedStyle(layersListElement).height;
-                    var newHeight = parseFloat(originalHeight) - 50;
-                    layersListElement.style.height = newHeight + 'px';
-                }
-            }
-            var isLayersListExpanded = true;
-            var controlLayersElement = document.querySelector('.leaflet-control-layers');
-            var toggleLayerControl = document.querySelector('.leaflet-control-layers-toggle');
-            // toggle Collapsed/Expanded and apply new Layers List height
-            toggleLayerControl.addEventListener('click', function() {
-                if (isLayersListExpanded) {
-                    controlLayersElement.classList.remove('leaflet-control-layers-expanded');
-                } else {
-                    controlLayersElement.classList.add('leaflet-control-layers-expanded');
-                }
-                isLayersListExpanded = !isLayersListExpanded;
-                newLayersListHeight()
-            });	
-			// apply new Layers List height if toggle layerstree
-			if (controlLayersElement) {
-				controlLayersElement.addEventListener('click', function(event) {
-					var toggleLayerHeaderPointer = event.target.closest('.leaflet-layerstree-header-pointer span');
-					if (toggleLayerHeaderPointer) {
-						newLayersListHeight();
-					}
-				});
-			}
-            // Collapsed/Expanded at Start to apply new height
-            setTimeout(function() {
-                toggleLayerControl.click();
-            }, 10);
-            setTimeout(function() {
-                toggleLayerControl.click();
-            }, 10);
-            // Collapsed touch/small screen
-            var isSmallScreen = window.innerWidth < 650;
-            if (isSmallScreen) {
-                setTimeout(function() {
-                    controlLayersElement.classList.remove('leaflet-control-layers-expanded');
-                    isLayersListExpanded = !isLayersListExpanded;
-                }, 500);
-            }  
-        });       
         setBounds();
         </script>
     </body>
